--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.header-class{
+.header-class {
   background-color: khaki;
   color: darkred;
   border: 5px solid yellow;
@@ -6,10 +6,50 @@
   padding: 10px;
   margin: 10px;
   font-size: 16px;
-  
 }
-.heading-firs{
+.heading-firs {
   font-size: 40px;
   text-decoration: underline;
   text-align: center;
+}
+.ul-class {
+}
+
+.div-class {
+  width: auto;
+  display: flex;
+  border: 5px solid brown;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  margin: 10px;
+}
+.article-img {
+  width: 50%;
+  display: block;
+  margin: 0 0;
+}
+.info {
+  /*display: block;
+  width: 50%;
+  margin: 0 0;*/
+  font-size: 24px;
+}
+.article-heading {
+  text-align: center;
+  background-color: tan;
+  margin: 10px;
+}
+.article-text {
+  font-size: 24px;
+  margin: 10px;
+}
+.article-li {
+  font-size: 24px;
+}
+.article-ol {
+  background-color: khaki;
+  color: darkred;
+  border: 5px solid yellow;
+  margin: 10px;
+  border-radius: 10px;
 }
